# Atom-NeptuneSDR-Twin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cosim/: README.md  REPRODUCE.md  p210-contacts.json
cosim/operator-core/: Makefile  p210_operator_core.c  (+5 more)
docs/: ARCHITECTURE.md  ARRIVAL_CHECKLIST.md  EVIDENCE.md  HOST_LIBIIO.md  P210_FFT_ABI.md  RUNTIME_ACCEPTANCE.md  UPSTREAM.md  USB.md  VIRTUAL_APPLIANCE.md  WIDEBAND_50MHZ.md
firmware/: neptune_fft_streamer.c
scripts/: accept_virtual_twin.sh  acceptance_gate.py  build_guest_fft.sh  build_host_libiio.sh  build_p210_qemu.sh  build_qemu.sh  cache_relocation.sh  capture_guest_fft.py  capture_unit.sh  check.sh  fetch_firmware.py  host_iio.sh  linux_usb_gadget.sh  prepare_runtime.py  qemu-system-arm-local.sh  qemu_boot.py  request_vendor_materials.md  resolve_firmware.py  resolve_firmwave.py  run_p210_firmware.sh  run_virtual_appliance.sh  test_firmware.py  verify_firmware_bundle.py  verify_firmwave_bundle.py  wire_operator_device.py  wire_rtl_device.py
specs/: contracts.json
tests/: __init__.py  test_acceptance_gate.py  test_ad9361.py  test_appliance_smoke.py  test_atom_dsp_conformance.py  test_board.py  test_boot_harness.py  test_build_cache_relocation.py  test_cli.py  test_cli_surface.py  test_clock_trace.py  test_contracts.py  test_fft.py  test_firmware.py  test_firmware_bundle.py  test_firmware_dependency.py  test_firmwave_bundle.py  test_firmwave_dependency.py  test_guest_fft_firmware.py  test_host_libiio.py  test_iio.py  test_p210_runtime_scripts.py  test_pl_runtime.py  test_platform_contacts.py  test_rf.py  test_runtime_contacts.py  test_runtime_rootfs.py  test_spec.py  test_spectrum_transport.py  test_throughput.py  test_trust_boundaries.py  test_usb.py  test_usb_contacts.py  test_usbip.py  test_virtual_appliance_script.py  test_xsa.py  test_zynq.py
(+77 files in other folders)
