[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neptunesdr-twin"
version = "0.1.0"
description = "Contract-driven executable digital twin of the NeptuneSDR/HAMGEEK P210"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "NeptuneSDR Twin contributors" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
neptune-twin = "neptunesdr_twin.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neptunesdr_twin = ["data/*.json"]

[tool.setuptools.data-files]
"share/neptunesdr-twin" = ["specs/contracts.json"]
